# jupyterlab-suggestions

./: .copier-answers.yml  .eslintignore  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  install.json  lerna.json  package.json  pyproject.toml  requirements-build.txt  tsconfigbase.json
.github/workflows/: build.yml  check-release.yml
jupyterlab_suggestions/: __init__.py
python/jupyter_suggestions/: LICENSE  README.md  pyproject.toml
python/jupyter_suggestions/scripts/: bump-version.py
python/jupyter_suggestions_core/: .gitignore  README.md  install.json  package.json  pyproject.toml
python/jupyter_suggestions_core/jupyter_suggestions_core/: __init__.py
python/jupyter_suggestions_core/schema/: commands.json  registry.json
python/jupyter_suggestions_core/src/: index.ts  plugins.ts  settingrenderer.tsx  tokens.ts
python/jupyter_suggestions_core/style/: base.css
python/jupyter_suggestions_rtc/: .gitignore  README.md  install.json  package.json  pyproject.toml
python/jupyter_suggestions_rtc/jupyter_suggestions_rtc/: __init__.py
python/jupyter_suggestions_rtc/scripts/: bump-version.py
python/jupyter_suggestions_rtc/src/: index.ts  manager.ts  plugins.ts
scripts/: build_packages.py  dev-install.py
src/: index.ts
ui-tests/: jupyter_server_test_config.py  package.json  playwright.config.js
ui-tests/tests/: ui.spec.ts
ui-tests/tests/notebooks/: test.ipynb
