[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.5.0",
  "jupyterlab>=4.0.0,<5",
  "hatch-nodejs-version>=0.3.2",
]

[project]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]
license = { file = "LICENSE" }
name = "jupyterlab_suggestions_root"
readme = "README.md"
requires-python = ">=3.9"

[tool.hatch.version]
path = "python/jupyter_suggestions/jupyter_suggestions/__init__.py"

[tool.jupyter-releaser]
skip = ["check-python"]

[tool.jupyter-releaser.options]
python_packages = [
  "python/jupyter_suggestions:jupyter_suggestions",
  "python/jupyter_suggestions_core:jupyter_suggestions_core",
  "python/jupyter_suggestions_rtc:jupyter_suggestions_rtc",
]
version_cmd = "python scripts/bump-version.py"

[tool.jupyter-releaser.hooks]
before-build-npm = ["jlpm", "jlpm build:prod"]
before-bump-version = ["python -m pip install hatch 'jupyterlab>=4.0.0'"]

[tool.check-wheel-contents]
ignore = ["W002"]
